--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
+    "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "sequelize": "^4.37.10",
+    "sequelize": "^4.37.10"
+  },
+  "devDependencies": {
     "webpack": "^4.10.2"
   }
 }
