--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Amazon",
+  "name": "hrla22-front-end-capstone",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ratings & Reviews Component for Amazon Product Page",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "build": "webpack -w"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kevin Cerda",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
@@ -17,14 +18,17 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
-    "webpack": "^4.10.2"
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4"
   }
 }
