--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
-    "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "sequelize": "^4.37.10",
-    "style-loader": "^0.21.0"
+    "styled-components": "^3.3.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "webpack": "^4.10.2",
