--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lato-font": "^3.0.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-fontawesome": "^1.6.1",
     "sequelize": "^4.37.10",
     "styled-components": "^3.3.0",
     "webfontloader": "^1.6.28"
