Review entries styling completed.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Kevin Cerda",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "0.0.20",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
