--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "helmet": "^3.12.1",
+    "jest": "^23.1.0",
     "lato-font": "^3.0.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
@@ -34,6 +36,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "babel-jest": "^23.0.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
