--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ratings & Reviews Component for Amazon Product Page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server/index.js",
     "build": "webpack -w"
   },
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
@@ -37,6 +38,8 @@
   },
   "devDependencies": {
     "babel-jest": "^23.0.1",
+    "jest-styled-components": "^5.0.1",
+    "regenerator-runtime": "^0.11.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
