--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-fontawesome": "^1.6.1",
+    "react-test-renderer": "^16.4.0",
     "sequelize": "^4.37.10",
     "styled-components": "^3.3.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "babel-jest": "^23.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest-styled-components": "^5.0.1",
     "regenerator-runtime": "^0.11.1",
     "webpack": "^4.10.2",
