--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lato-font": "^3.0.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-fontawesome": "^1.6.1",
@@ -41,6 +42,7 @@
     "babel-jest": "^23.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jest-enzyme": "^6.0.1",
     "jest-styled-components": "^5.0.1",
     "regenerator-runtime": "^0.11.1",
     "webpack": "^4.10.2",
